Dashboard page - layout bug fixes

--- a/src/app/login.component.css
+++ b/src/app/login.component.css
@@ -1,5 +1,5 @@
 .page-heading {
-    padding: 75px 0;
+    padding: 60px 0;
 }
 .intro-header {
     margin-bottom: 0px;
